# eval-backend

./: AGENTS.md  pyproject.toml
docs/: 2026-04-02-eval-backend-flagship-v1.md  2026-04-02-eval-backend-framing-draft.md  2026-04-05-eval-backend-tiny-example.md  2026-04-14-eval-backend-refresh.md  2026-04-14-flagship-milestone-note-stub.md  2026-04-14-public-artifact-cadence.md  2026-04-19-define-the-first-coding-slice.md  2026-04-19-eval-backend-project-handoff.md
src/eval_backend/: evaluator.py  executor.py  models.py  runner.py
