[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-backend"
version = "0.1.0"
description = "Backend evaluator for simple LLM response evaluation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tae Hyun Kim", email = "taehyun.kim0913@gmail.com" },
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]